Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63979

[REG 5.7.1 -> 5.9.2/Windows 7, 8] QWindow::wheelEvent is not called when another widget is focused

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.2
    • 5.9.0, 5.9.1, 5.9.2, 5.9.3, 5.9.4
    • None
    • Windows 7, Windows 8.1, MSVC 2013, MSVC 2015
    • Windows
    • 9c707f140e96937f2ea256a6a93dc827328f22ad (qtbase/5.11, 13.12.2017, 5.11.2)

      When putting a window inside QWidget::createWindowContainer its wheelEvent is not called in Qt 5.9.2 for Windows MSVC 2015 32 bit

      in Qt 5.7.1 MSVC 2013 and Qt 5.9.2 macOS wheel event is called fine

      To reproduce run example application. When you move mouse cursor on the colored widget and use mouse wheel it should fill the widget with random color.

      If you focus the list widget and then move mouse cursor on the colored widget and use mouse wheel, the colors will not change because wheelEvent is not called.

      Relevant commits "Win: Account for windows which are WindowTransparentForInput" af5c8d04fb0c9ddda58925e4862e857c78a5e563 https://codereview.qt-project.org/#/c/181048/ for QTBUG-57864

        1. qtbug63979_log.txt
          13 kB
        2. qtbug63979_modified.txt
          5 kB
        3. qtbug63979_modified.zip
          1 kB
        4. qtbug63979.zip
          2 kB
        5. TestWheelBug.zip
          3 kB
        For Gerrit Dashboard: QTBUG-63979
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            kusharami Alexandra Cherdantseva
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes